--- a/simplesat/.travis.yml
+++ b/simplesat/.travis.yml
@@ -5,4 +5,4 @@ install:
   - python setup.py develop
   - pip install -r requirements_tests.txt
 script:
-  - python -m unittest discover
+  - python -m unittest discover -v
