--- a/simplesat/tests/ipython.yaml
+++ b/simplesat/tests/ipython.yaml
@@ -1,7 +1,7 @@
 packages:
     - appinst 2.1.0-1
     - appinst 2.1.2-1
-    - appinst 2.0.4-1
+    - AppInst 2.0.4-1
     - appinst 2.1.1-1
     - tornado 4.0.2-1; depends (ssl_match_hostname ~= 3.4.0.2)
     - tornado 3.1.1-1
@@ -11,20 +11,20 @@ packages:
     - tornado 4.0.2-2; depends (ssl_match_hostname ~= 3.4.0.2)
     - tornado 2.1.1-1
     - tornado 2.1-1
-    - markupsafe 0.23-1
-    - markupsafe 0.18-2
-    - markupsafe 0.18-1
-    - pygments 1.6.0-1
-    - pygments 2.0.1-1
-    - pygments 1.4-1
-    - pygments 1.3.1-2
-    - jinja2 2.7.1-1; depends (MarkupSafe ~= 0.18)
-    - jinja2 2.7.3-1; depends (MarkupSafe ~= 0.18)
-    - jinja2 2.6-2
-    - jinja2 2.7.3-2; depends (MarkupSafe ~= 0.23)
-    - jinja2 2.5.5-3; depends (Pygments ~= 1.4)
-    - jinja2 2.6-1; depends (Pygments ~= 1.4)
-    - jinja2 2.5.5-2; depends (Pygments ~= 1.3.1)
+    - MarkupSafe 0.23-1
+    - MarkupSafe 0.18-2
+    - MarkupSafe 0.18-1
+    - Pygments 1.6.0-1
+    - Pygments 2.0.1-1
+    - Pygments 1.4-1
+    - Pygments 1.3.1-2
+    - Jinja2 2.7.1-1; depends (MarkupSafe ~= 0.18)
+    - Jinja2 2.7.3-1; depends (MarkupSafe ~= 0.18)
+    - Jinja2 2.6-2
+    - Jinja2 2.7.3-2; depends (MarkupSafe ~= 0.23)
+    - Jinja2 2.5.5-3; depends (Pygments ~= 1.4)
+    - Jinja2 2.6-1; depends (Pygments ~= 1.4)
+    - Jinja2 2.5.5-2; depends (Pygments ~= 1.3.1)
     - ipython 1.1.0-6; depends (pyzmq ~= 2.2.0, appinst, Pygments ~= 1.6.0, Jinja2 ~= 2.7.1, tornado ~= 3.1.1)
     - ipython 2.2.0-2; depends (pyzmq ~= 14.3.1, appinst, Jinja2 ~= 2.7.3, Pygments ~= 1.6.0, tornado ~= 4.0.1)
     - ipython 2.3.1-2; depends (tornado ~= 4.0.2, appinst, pyzmq ~= 14.4.1, Jinja2 ~= 2.7.3, Pygments ~= 2.0.1)
@@ -94,12 +94,12 @@ request:
 
 solution:
     - ipython 2.3.1-2
-    - jinja2 2.7.3-2
+    - Jinja2 2.7.3-2
     - appinst 2.1.2-1
     - pyzmq 14.4.1-1
     - tornado 4.0.2-2
-    - pygments 2.0.1-1
-    - markupsafe 0.23-1
+    - Pygments 2.0.1-1
+    - MarkupSafe 0.23-1
     - zeromq 4.0.4-1
     - ssl_match_hostname 3.4.0.2-1
 
