--- a/simplesat/tests/simple_numpy.yaml
+++ b/simplesat/tests/simple_numpy.yaml
@@ -1,13 +1,13 @@
 packages:
-    - mkl 10.2-1
-    - mkl 10.3-1
-    - numpy 1.7.1-1; depends (mkl == 10.3-1)
-    - numpy 1.8.1-1; depends (mkl == 10.3-1)
+    - MKL 10.2-1
+    - MKL 10.3-1
+    - numpy 1.7.1-1; depends (MKL == 10.3-1)
+    - numpy 1.8.1-1; depends (MKL == 10.3-1)
 
 request:
     - operation: "install"
       requirement: "numpy"
 
 solution:
-    - mkl 10.3-1
+    - MKL 10.3-1
     - numpy 1.8.1-1
