--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: python
+
+sudo: false
+
 python:
   - "2.7"
+
 install:
   - pip install -r requirements.txt
   - pip install -r requirements_tests.txt
@@ -8,5 +12,6 @@ install:
   - pushd dependencies/enstaller
   - python setup.py develop
   - popd
+
 script:
   - python -m unittest discover -v
