--- a/simplesat/tests/ipython.yaml
+++ b/simplesat/tests/ipython.yaml
@@ -93,15 +93,15 @@ request:
       requirement: "ipython"
 
 solution:
-    - ipython 2.3.1-2
-    - Jinja2 2.7.3-2
-    - appinst 2.1.2-1
-    - pyzmq 14.4.1-1
-    - tornado 4.0.2-2
-    - Pygments 2.0.1-1
-    - MarkupSafe 0.23-1
-    - zeromq 4.0.4-1
-    - ssl_match_hostname 3.4.0.2-1
+    2: appinst 2.1.2-1
+    9: tornado 4.0.2-2
+    13: MarkupSafe 0.23-1
+    17: Pygments 2.0.1-1
+    23: Jinja2 2.7.3-2
+    29: ipython 2.3.1-2
+    66: zeromq 4.0.4-1
+    72: ssl_match_hostname 3.4.0.2-1
+    77: pyzmq 14.4.1-1
 
                
                
