--- a/simplesat/tests/iris.yaml
+++ b/simplesat/tests/iris.yaml
@@ -364,109 +364,47 @@ request:
       requirement: "iris"
 
 solution:
-    - iris 1.7.3-2
-    - libudunits 2.2.17-2
-    - numpy 1.8.1-1
-    - Shapely 1.5.1-1
-    - Biggus 0.7.0-1
-    - GDAL 1.11.1-1
-    - scipy 0.14.1rc1-1
-    - pandas 0.15.2-1
-    - pyke 1.1.1-1
-    - matplotlib 1.4.2-2
-    - cartopy 0.11.0-5
-    - PIL 1.1.7-14
-    - expat 2.0.1-3
-    - netCDF4 1.1.1-2
-    - pygrib 1.9.9-3
-    - expat 2.0.1-3
-    - MKL 10.3-1
-    - geos 3.4.2-1
-    - pep8 1.5.7-1
-    - numpy 1.8.1-1
-    - MKL 10.3-1
-    - numpy 1.8.1-1
-    - libgdal 1.11.0-7
-    - MKL 10.3-1
-    - lib_netcdf4 4.3.2-2
-    - hdf5 1.8.11-1
-    - curl 7.38.0-1
-    - libxml2 2.9.2-2
-    - expat 2.0.1-3
-    - libpng 1.6.12-3
-    - hdf5 1.8.11-1
-    - curl 7.38.0-1
-    - numpy 1.8.1-1
-    - libgfortran 3.0.0-2
-    - MKL 10.3-1
-    - MKL 10.3-1
-    - python_dateutil 2.2.0-5
-    - distribute 0.6.49-1
-    - numpy 1.8.1-1
-    - pytz 2014.9.0-1
-    - six 1.8.0-2
-    - MKL 10.3-1
-    - htmltemplate 1.5.0-2
-    - doctest_tools 1.0a3-1
-    - numpy 1.8.1-1
-    - pyparsing 2.0.2-1
-    - tornado 4.0.2-2
-    - wxPython 2.8.10.1-7
-    - pytz 2014.9.0-1
-    - libpng 1.6.12-3
-    - python_dateutil 2.2.0-5
-    - freetype 2.5.3-4
-    - configobj 5.0.6-1
-    - MKL 10.3-1
-    - ssl_match_hostname 3.4.0.2-1
-    - six 1.8.0-2
-    - libpng 1.6.12-3
-    - Shapely 1.5.1-1
-    - libproj 4.8.0-2
-    - scipy 0.14.1rc1-1
-    - geos 3.4.2-1
-    - matplotlib 1.4.2-2
-    - PIL 1.1.7-14
-    - OWSLib 0.8.8-4
-    - pyshp 1.2.0-1
-    - geos 3.4.2-1
-    - numpy 1.8.1-1
-    - libgfortran 3.0.0-2
-    - MKL 10.3-1
-    - MKL 10.3-1
-    - numpy 1.8.1-1
-    - pyparsing 2.0.2-1
-    - tornado 4.0.2-2
-    - wxPython 2.8.10.1-7
-    - pytz 2014.9.0-1
-    - libpng 1.6.12-3
-    - python_dateutil 2.2.0-5
-    - freetype 2.5.3-4
-    - configobj 5.0.6-1
-    - MKL 10.3-1
-    - ssl_match_hostname 3.4.0.2-1
-    - six 1.8.0-2
-    - libpng 1.6.12-3
-    - libjpeg 7.0-3
-    - freetype 2.5.3-4
-    - libpng 1.6.12-3
-    - python_dateutil 2.2.0-5
-    - pytz 2014.9.0-1
-    - lxml 3.4.1-1
-    - six 1.8.0-2
-    - libxslt 1.1.28-2
-    - libxml2 2.9.2-2
-    - libxml2 2.9.2-2
-    - libjpeg 7.0-3
-    - freetype 2.5.3-4
-    - libpng 1.6.12-3
-    - lib_netcdf4 4.3.2-2
-    - hdf5 1.8.11-1
-    - numpy 1.8.1-1
-    - hdf5 1.8.11-1
-    - curl 7.38.0-1
-    - MKL 10.3-1
-    - numpy 1.8.1-1
-    - pyproj 1.9.3-1
-    - libpng 1.6.12-3
-    - MKL 10.3-1
+  3: configobj 5.0.6-1
+  5: htmltemplate 1.5.0-2
+  13: libxml2 2.9.2-2
+  15: distribute 0.6.49-1
+  25: Biggus 0.7.0-1
+  26: pyke 1.1.1-1
+  30: pyproj 1.9.3-1
+  33: libxslt 1.1.28-2
+  38: pyparsing 2.0.2-1
+  41: doctest_tools 1.0a3-1
+  48: curl 7.38.0-1
+  62: GDAL 1.11.1-1
+  72: lxml 3.4.1-1
+  80: PIL 1.1.7-14
+  86: libgfortran 3.0.0-2
+  88: geos 3.4.2-1
+  90: six 1.8.0-2
+  95: OWSLib 0.8.8-4
+  104: tornado 4.0.2-2
+  110: pygrib 1.9.9-3
+  115: libpng 1.6.12-3
+  117: python_dateutil 2.2.0-5
+  123: pyshp 1.2.0-1
+  126: numpy 1.8.1-1
+  171: pandas 0.15.2-1
+  179: freetype 2.5.3-4
+  186: MKL 10.3-1
+  189: libproj 4.8.0-2
+  215: matplotlib 1.4.2-2
+  216: libudunits 2.2.17-2
+  226: scipy 0.14.1rc1-1
+  237: pytz 2014.9.0-1
+  245: libgdal 1.11.0-7
+  262: cartopy 0.11.0-5
+  269: lib_netcdf4 4.3.2-2
+  281: ssl_match_hostname 3.4.0.2-1
+  282: Shapely 1.5.1-1
+  300: iris 1.7.3-2
+  305: netCDF4 1.1.1-2
+  326: hdf5 1.8.11-1
+  328: libjpeg 7.0-3
+  330: expat 2.0.1-3
+  335: pep8 1.5.7-1
+  340: wxPython 2.8.10.1-7
