--- a/simplesat/tests/simple_numpy.yaml
+++ b/simplesat/tests/simple_numpy.yaml
@@ -9,5 +9,5 @@ request:
       requirement: "numpy"
       
 solution:
-    - MKL 10.3-1
-    - numpy 1.8.1-1
+    2: MKL 10.3-1
+    4: numpy 1.8.1-1
