--- a/simplesat/tests/iris.yaml
+++ b/simplesat/tests/iris.yaml
@@ -363,7 +363,7 @@ request:
     - operation: "install"
       requirement: "iris"
 
-solution:
+decisions:
     22: configobj 5.0.6-1
     25: MKL 10.3-1
     31: PIL 1.1.7-14
@@ -408,3 +408,95 @@ solution:
     336: pyproj 1.9.3-1
     341: pep8 1.5.7-1
     358: scipy 0.14.1rc1-1
+
+transaction:
+    - kind: "install"
+      package: "MKL 10.3-1"
+    - kind: "install"
+      package: "numpy 1.8.1-1"
+    - kind: "install"
+      package: "libgfortran 3.0.0-2"
+    - kind: "install"
+      package: "scipy 0.14.1rc1-1"
+    - kind: "install"
+      package: "htmltemplate 1.5.0-2"
+    - kind: "install"
+      package: "doctest_tools 1.0a3-1"
+    - kind: "install"
+      package: "pyke 1.1.1-1"
+    - kind: "install"
+      package: "pyproj 1.9.3-1"
+    - kind: "install"
+      package: "libpng 1.6.12-3"
+    - kind: "install"
+      package: "pygrib 1.9.9-3"
+    - kind: "install"
+      package: "pytz 2014.9.0-1"
+    - kind: "install"
+      package: "six 1.8.0-2"
+    - kind: "install"
+      package: "python_dateutil 2.2.0-5"
+    - kind: "install"
+      package: "distribute 0.6.49-1"
+    - kind: "install"
+      package: "pandas 0.15.2-1"
+    - kind: "install"
+      package: "hdf5 1.8.11-1"
+    - kind: "install"
+      package: "curl 7.38.0-1"
+    - kind: "install"
+      package: "lib_netcdf4 4.3.2-2"
+    - kind: "install"
+      package: "netCDF4 1.1.1-2"
+    - kind: "install"
+      package: "wxPython 2.8.10.1-7"
+    - kind: "install"
+      package: "ssl_match_hostname 3.4.0.2-1"
+    - kind: "install"
+      package: "tornado 4.0.2-2"
+    - kind: "install"
+      package: "pyparsing 2.0.2-1"
+    - kind: "install"
+      package: "freetype 2.5.3-4"
+    - kind: "install"
+      package: "configobj 5.0.6-1"
+    - kind: "install"
+      package: "matplotlib 1.4.2-2"
+    - kind: "install"
+      package: "expat 2.0.1-3"
+    - kind: "install"
+      package: "libudunits 2.2.17-2"
+    - kind: "install"
+      package: "pyshp 1.2.0-1"
+    - kind: "install"
+      package: "libproj 4.8.0-2"
+    - kind: "install"
+      package: "geos 3.4.2-1"
+    - kind: "install"
+      package: "Shapely 1.5.1-1"
+    - kind: "install"
+      package: "libjpeg 7.0-3"
+    - kind: "install"
+      package: "PIL 1.1.7-14"
+    - kind: "install"
+      package: "libxml2 2.9.2-2"
+    - kind: "install"
+      package: "libxslt 1.1.28-2"
+    - kind: "install"
+      package: "lxml 3.4.1-1"
+    - kind: "install"
+      package: "OWSLib 0.8.8-4"
+    - kind: "install"
+      package: "zlib 1.2.6-1"
+    - kind: "install"
+      package: "cartopy 0.11.0-5"
+    - kind: "install"
+      package: "libgdal 1.11.0-7"
+    - kind: "install"
+      package: "GDAL 1.11.1-1"
+    - kind: "install"
+      package: "pep8 1.5.7-1"
+    - kind: "install"
+      package: "Biggus 0.7.0-1"
+    - kind: "install"
+      package: "iris 1.7.3-2"
