--- a/simplesat/tests/simple_numpy.yaml
+++ b/simplesat/tests/simple_numpy.yaml
@@ -8,6 +8,12 @@ request:
     - operation: "install"
       requirement: "numpy"
       
-solution:
+decisions:
     2: MKL 10.3-1
     4: numpy 1.8.1-1
+
+transaction:
+    - kind: "install"
+      package: "MKL 10.3-1"
+    - kind: "install"
+      package: "numpy 1.8.1-1"
