--- a/.coveragerc
+++ b/.coveragerc
@@ -1,21 +1,19 @@
 [run]
 branch = True
 source = simplesat
-omit = *test*
 
 [report]
+omit = *test*
+
 # Regexes for lines to exclude from consideration
 exclude_lines =
     # Have to re-enable the standard pragma
     pragma: no cover
 
-    # Don't complain about missing debug-only code:
     def __repr__
 
-    # Don't complain if tests don't hit defensive assertion code:
-    raise AssertionError
-    raise NotImplementedError
-
+    # Don't complain if non-runnable code isn't run:
     if __name__ == .__main__.:
 
-ignore_errors = True
+    @abc.abstractmethod
+    @abstractmethod
