--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,13 @@ envlist = py27
 
 [testenv]
 deps= -rtox_requirements.txt
+# To make sure we actually test the tarball and now the working directory
+changedir = .tox
 commands=haas tests simplesat
+passenv = *
 
 [testenv:coverage]
 deps= -rtox_requirements.txt
-commands=coverage run -m haas tests simplesat
-         coverage report --include simplesat/*
+commands=coverage run --rcfile=../.coveragerc -m haas simplesat
+         coverage report --rcfile=../.coveragerc -m
+         coverage html --rcfile=../.coveragerc
