--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dependencies/enstaller"]
 	path = dependencies/enstaller
-	url = https://github.com:enthought/enstaller
+	url = https://github.com/enthought/enstaller
