MAINT: consolidate test setup for travis/tox.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py27,py34,pypy
 deps= -rtox_requirements.txt
 # To make sure we actually test the tarball and now the working directory
 changedir = .tox
-commands=haas tests simplesat
+commands=haas simplesat
 passenv = *
 
 [testenv:coverage]
