--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,10 @@ python:
   - "pypy"
 
 install:
-  - pip install -r requirements.txt
-  - pip install -r requirements_tests.txt
-  - python setup.py develop
+  - pip install -r dev_requirements.txt
+  - python install .
   - pushd dependencies/enstaller
-  - python setup.py develop
+  - python install .
   - popd
 
 script:
