--- a/simplesat/tests/numpy_downgrade.yaml
+++ b/simplesat/tests/numpy_downgrade.yaml
@@ -36,7 +36,12 @@ installed:
   - libgfortran 3.0.0-2
   - numpy 1.9.2-1
 
+decisions:
+  3: MKL 10.3-1
+  5: libgfortran 3.0.0-2
+  26: numpy 1.8.1-3
+
 transaction:
-    - kind: "dowgrade"
+    - kind: "update"
       from: "numpy 1.9.2-1"
       to: "numpy 1.8.1-3"
