--- a/simplesat/tests/simple_numpy_installed_blocking_downgrade.yaml
+++ b/simplesat/tests/simple_numpy_installed_blocking_downgrade.yaml
@@ -14,3 +14,7 @@ installed:
     - EPD_free 7.4-1
     - MKL 10.3-1
     - numpy 1.8.1-1
+
+transaction:
+    - kind: "fail"
+      reason: "EPD_free 7.4-1 conflicts with numpy < 1.8"
