--- a/simplesat/tests/directly_implied_solution.yaml
+++ b/simplesat/tests/directly_implied_solution.yaml
@@ -27,6 +27,18 @@ packages:
   - numpy 1.8.1-3; depends (libgfortran ~= 3.0.0, MKL == 10.3-1)
   - numpy 1.9.2-1; depends (libgfortran ~= 3.0.0, MKL == 10.3-1)
 
+
+# There is only one possible solution. It should be found immediately via
+# propagation without any assumptions.
 request:
     - operation: "install"
       requirement: "numpy >= 1.9.2"
+
+
+transaction:
+    - kind: "install"
+      package: "libgfortran 3.0.0-2"
+    - kind: "install"
+      package: "MKL 10.3-1"
+    - kind: "install"
+      package: "numpy 1.9.2-1"
