BUG: don't force all installed packages to remain installed

--- a/simplesat/tests/simple_numpy_removed.yaml
+++ b/simplesat/tests/simple_numpy_removed.yaml
@@ -11,4 +11,8 @@ installed:
 
 request:
     - operation: "remove"
-      requirement: "MKL"
+      requirement: "numpy"
+
+transaction:
+  - kind: "remove"
+    package: "numpy 1.6.1-1"
