--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 PyYAML
-git+ssh://git@github.com/enthought/enstaller_private@7506336dfaa0f44118d5ce5e17e2e998209abe82#egg=enstaller
+git+ssh://git@github.com/enthought/enstaller@5a2c9be9b4a3e89b0c0f462289a0ccda1cc9b3a9#egg=enstaller
