--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27,py34,pypy
 
 [testenv]
-deps= -rtox_requirements.txt
+deps= -rdev_requirements.txt
 # To make sure we actually test the tarball and now the working directory
 changedir = .tox
 commands=haas simplesat
