ENH: support marked packages in scenario files

--- a/simplesat/tests/preserve_marked.yaml
+++ b/simplesat/tests/preserve_marked.yaml
@@ -7,6 +7,9 @@ installed:
     - requests 2.7.0-1
     - browsey 1.2.0-1
 
+marked:
+    - browsey
+
 request:
     - operation: "remove"
       requirement: "requests"
