--- a/simplesat/tests/simple_numpy_installed_blocking_downgrade.yaml
+++ b/simplesat/tests/simple_numpy_installed_blocking_downgrade.yaml
@@ -6,6 +6,9 @@ packages:
     - numpy 1.7.1-1; depends (MKL == 10.2-1)
     - numpy 1.8.1-1; depends (MKL == 10.3-1)
 
+marked:
+    - EPD_free
+
 request:
     - operation: "install"
       requirement: "numpy < 1.8"
