--- a/simplesat/tests/update_all.yaml
+++ b/simplesat/tests/update_all.yaml
@@ -159,8 +159,11 @@ packages:
   - zeromq 4.0.5-1
 
 request:
-    - operation: "install"
-      requirement: "ipython >= 4.0"
+    - operation: "update_all"
+
+marked:
+  - ipython
+  - Jinja2
 
 installed:
   - zeromq 4.0.5-1
@@ -178,52 +181,62 @@ installed:
   - Jinja2 2.7.3-2
   - ipython 3.2.1-1
 
+# If installed packages are preferred, a solution that keeps Jinja2 2.7.3-2
+# will be found instead
+
 transaction:
   - kind: "update"
-    from: "ipython 3.2.1-1"
-    to: "ipython 4.0.0-2"
-  - kind: "install"
-    package: "jupyter 1.0.0"
-  - kind: "install"
-    package: "traitlets 4.0.0-1"
-  - kind: "install"
-    package: "decorator 4.0.2-1"
-  - kind: "install"
-    package: "simplegeneric 0.8.1-1"
-  - kind: "install"
-    package: "gnureadline 6.3.3-1"
-  - kind: "install"
-    package: "libncurses 5.9-1"
-  - kind: "install"
-    package: "pexpect 3.3-2"
+    from: "tornado 4.2-1"
+    to: "tornado 4.2.1-1"
+  - kind: "update"
+    from: "terminado 0.5-2"
+    to: "terminado 0.5-3"
+  - kind: "update"
+    from: "mistune 0.6-2"
+    to: "mistune 0.7.1-1"
   - kind: "install"
     package: "ipython_genutils 0.1.0-1"
   - kind: "install"
-    package: "qtconsole 4.0.1-2"
+    package: "decorator 4.0.2-1"
+  - kind: "install"
+    package: "traitlets 4.0.0-1"
   - kind: "install"
     package: "jupyter_core 4.0.6-1"
   - kind: "install"
     package: "jupyter_client 4.0.0-2"
   - kind: "install"
+    package: "simplegeneric 0.8.1-1"
+  - kind: "install"
+    package: "path.py 8.1.1-1"
+  - kind: "install"
+    package: "pickleshare 0.5-1"
+  - kind: "install"
+    package: "pexpect 3.3-2"
+  - kind: "install"
+    package: "libncurses 5.9-1"
+  - kind: "install"
+    package: "gnureadline 6.3.3-1"
+  - kind: "install"
+    package: "ipython4 4.0.0-5"
+  - kind: "install"
     package: "ipykernel 4.0.3-2"
   - kind: "install"
-    package: "nbconvert 4.0.0-4"
-  - kind: "update"
-    from: "mistune 0.6-2"
-    to: "mistune 0.7.1-1"
+    package: "qtconsole 4.0.1-2"
+  - kind: "install"
+    package: "nbformat 4.0.0-2"
   - kind: "update"
     from: "Jinja2 2.7.3-2"
     to: "Jinja2 2.8-1"
   - kind: "install"
-    package: "MarkupSafe 0.23-1"
+    package: "nbconvert 4.0.0-4"
   - kind: "install"
-    package: "nbformat 4.0.0-2"
+    package: "notebook 4.0.5-4"
   - kind: "install"
     package: "jupyter_console 4.0.2-2"
   - kind: "install"
     package: "ipywidgets 4.0.3-1"
   - kind: "install"
-    package: "notebook 4.0.5-4"
+    package: "jupyter 1.0.0-3"
   - kind: "update"
-    from: "tornado 4.2-1"
-    to: "tornado 4.2.1-1"
+    from: "ipython 3.2.1-1"
+    to: "ipython 4.0.0-2"
