TST: update reverse dependency scenario tests for new behavior

--- a/simplesat/tests/update_reverse_dependencies_no_prefer_installed.yaml
+++ b/simplesat/tests/update_reverse_dependencies_no_prefer_installed.yaml
@@ -59,9 +59,13 @@ transaction:
     from: "Z 0.0.0-1"
     to: "Z 1.0.0-1"
   - kind: "install"
-    package: "F 0.0.0-1"
+    package: "G 1.0.0-1"
+  - kind: "update"
+    from: "A 0.0.0-1"
+    to: "A 3.0.0-1"
+  - kind: "update"
+    from: "X 0.0.0-1"
+    to: "X 1.0.0-1"
   - kind: "update"
     from: "Y 0.0.0-1"
-    to: "Y 2.0.0-1"
-  - kind: "remove"
-    package: "X 0.0.0-1"
+    to: "Y 3.0.0-1"
