MAINT: use ^= instead of ~=

--- a/simplesat/tests/no_candidate.yaml
+++ b/simplesat/tests/no_candidate.yaml
@@ -1,7 +1,7 @@
 packages:
     - MKL 10.3-1
     - libgfortran 3.0.0-2
-    - numpy 1.9.2-1; depends (libgfortran ~= 3.0.0, MKL == 10.3-1)
+    - numpy 1.9.2-1; depends (libgfortran ^= 3.0.0, MKL == 10.3-1)
 
 request:
     - operation: "install"
