--- a/simplesat/tests/numpy_downgrade.yaml
+++ b/simplesat/tests/numpy_downgrade.yaml
@@ -24,8 +24,8 @@ packages:
     - numpy 1.8.0-3; depends (MKL == 10.3-1)
     - numpy 1.8.1-1; depends (MKL == 10.3-1)
     - numpy 1.8.1-2; depends (MKL == 10.3-1)
-    - numpy 1.8.1-3; depends (libgfortran ~= 3.0.0, MKL == 10.3-1)
-    - numpy 1.9.2-1; depends (libgfortran ~= 3.0.0, MKL == 10.3-1)
+    - numpy 1.8.1-3; depends (libgfortran ^= 3.0.0, MKL == 10.3-1)
+    - numpy 1.9.2-1; depends (libgfortran ^= 3.0.0, MKL == 10.3-1)
 
 request:
     - operation: "install"
