--- a/simplesat/tests/update_reverse_dependencies_no_prefer_installed.yaml
+++ b/simplesat/tests/update_reverse_dependencies_no_prefer_installed.yaml
@@ -1,35 +1,35 @@
 # This is update_reverse_dependencies.yaml, but with the
 # solution for prefer_installed=False
 packages:
-  - A 0.0.0-1; depends (C ~= 0.0.0)
-  - A 3.0.0-1; depends (G ~= 1.0.0)
-  - B 0.0.0-1; depends (D ~= 0.0.0)
+  - A 0.0.0-1; depends (C ^= 0.0.0)
+  - A 3.0.0-1; depends (G ^= 1.0.0)
+  - B 0.0.0-1; depends (D ^= 0.0.0)
   - B 1.0.0-1
   - C 0.0.0-1
   - D 0.0.0-1
-  - E 0.0.0-1; depends (A ~= 0.0.0)
-  - E 1.0.0-1; depends (I ~= 0.0.0, B ~= 1.0.0)
+  - E 0.0.0-1; depends (A ^= 0.0.0)
+  - E 1.0.0-1; depends (I ^= 0.0.0, B ^= 1.0.0)
   - F 0.0.0-1
   - G 1.0.0-1
-  - I 0.0.0-1; depends (J ~= 0.0.0)
+  - I 0.0.0-1; depends (J ^= 0.0.0)
   - J 0.0.0-1
-  - X 0.0.0-1; depends (A ~= 0.0.0, B ~= 0.0.0)
-  - X 1.0.0-1; depends (A ~= 3.0.0, B ~= 1.0.0)
-  - Y 0.0.0-1; depends (X ~= 0.0.0)
+  - X 0.0.0-1; depends (A ^= 0.0.0, B ^= 0.0.0)
+  - X 1.0.0-1; depends (A ^= 3.0.0, B ^= 1.0.0)
+  - Y 0.0.0-1; depends (X ^= 0.0.0)
   - Y 1.0.0-1
     # Without pruning this can drag F in, even when Y 2.0.0 isn't in the
     # solution
-  - Y 2.0.0-1; depends (F ~= 0.0.0)
-  - Y 3.0.0-1; depends (X ~= 1.0.0)
+  - Y 2.0.0-1; depends (F ^= 0.0.0)
+  - Y 3.0.0-1; depends (X ^= 1.0.0)
     # None of our direct requirements depend or reverse-depend on Z, but it
     # must not be pruned
-  - Z 0.0.0-1; depends (E ~= 0.0.0)
-  - Z 1.0.0-1; depends (E ~= 1.0.0)
+  - Z 0.0.0-1; depends (E ^= 0.0.0)
+  - Z 1.0.0-1; depends (E ^= 1.0.0)
 
 
 request:
   - operation: "install"
-    requirement: "E ~= 1.0.0"
+    requirement: "E ^= 1.0.0"
 
 
 marked:
