--- a/simplesat/tests/update_all_conflict.yaml
+++ b/simplesat/tests/update_all_conflict.yaml
@@ -22,5 +22,10 @@ installed:
   - pandas 0.12.5-3
 
 failure:
-  - "numpy 1.9.2-2 conflicts with numpy 1.9.2-1 (from pandas 0.18.0-1)"
-  - "MKL 10.3-2 conflicts with MKL 10.3-1 (from numpy 1.9.2-1, pandas 0.18.0-1)"
+  requirements: ['pandas', 'numpy']
+  raw: |
+    Conflicting requirements:
+    Requirement: 'pandas'
+        Update to latest command rule (+pandas-0.18.0-1)
+    Requirement: 'numpy'
+        Update to latest command rule (+numpy-1.9.2-2)
