--- a/simplesat/tests/update_reverse_dependencies.yaml
+++ b/simplesat/tests/update_reverse_dependencies.yaml
@@ -47,6 +47,32 @@ installed:
 
 transaction:
   - kind: "remove"
+    package: "Z 0.0.0-1"
+  - kind: "remove"
+    package: "Y 0.0.0-1"
+  - kind: "remove"
+    package: "X 0.0.0-1"
+  - kind: "remove"
+    package: "E 0.0.0-1"
+  - kind: "remove"
+    package: "B 0.0.0-1"
+  - kind: "install"
+    package: "B 1.0.0-1"
+  - kind: "install"
+    package: "F 0.0.0-1"
+  - kind: "install"
+    package: "J 0.0.0-1"
+  - kind: "install"
+    package: "I 0.0.0-1"
+  - kind: "install"
+    package: "Y 2.0.0-1"
+  - kind: "install"
+    package: "E 1.0.0-1"
+  - kind: "install"
+    package: "Z 1.0.0-1"
+
+pretty_transaction:
+  - kind: "remove"
     package: "X 0.0.0-1"
   - kind: "update"
     from: "B 0.0.0-1"
