--- a/simplesat/tests/update_reverse_dependencies_no_prefer_installed.yaml
+++ b/simplesat/tests/update_reverse_dependencies_no_prefer_installed.yaml
@@ -48,6 +48,38 @@ installed:
   - Z 0.0.0-1
 
 transaction:
+  - kind: "remove"
+    package: "Z 0.0.0-1"
+  - kind: "remove"
+    package: "Y 0.0.0-1"
+  - kind: "remove"
+    package: "X 0.0.0-1"
+  - kind: "remove"
+    package: "E 0.0.0-1"
+  - kind: "remove"
+    package: "B 0.0.0-1"
+  - kind: "remove"
+    package: "A 0.0.0-1"
+  - kind: "install"
+    package: "B 1.0.0-1"
+  - kind: "install"
+    package: "G 1.0.0-1"
+  - kind: "install"
+    package: "J 0.0.0-1"
+  - kind: "install"
+    package: "A 3.0.0-1"
+  - kind: "install"
+    package: "I 0.0.0-1"
+  - kind: "install"
+    package: "E 1.0.0-1"
+  - kind: "install"
+    package: "X 1.0.0-1"
+  - kind: "install"
+    package: "Y 3.0.0-1"
+  - kind: "install"
+    package: "Z 1.0.0-1"
+
+pretty_transaction:
   - kind: "update"
     from: "B 0.0.0-1"
     to: "B 1.0.0-1"
