--- a/simplesat/tests/numpy_downgrade.yaml
+++ b/simplesat/tests/numpy_downgrade.yaml
@@ -41,6 +41,12 @@ decisions:
   26: numpy 1.8.1-3
 
 transaction:
+    - kind: "remove"
+      package: "numpy 1.9.2-1"
+    - kind: "install"
+      package: "numpy 1.7.1-3"
+
+pretty_transaction:
     - kind: "update"
       from: "numpy 1.9.2-1"
       to: "numpy 1.7.1-3"
