--- a/simplesat/tests/simple_update_single.yaml
+++ b/simplesat/tests/simple_update_single.yaml
@@ -11,6 +11,12 @@ installed:
   - MKL 10.2-1
 
 transaction:
+    - kind: "remove"
+      package: "MKL 10.2-1"
+    - kind: "install"
+      package: "MKL 10.3-1"
+
+pretty_transaction:
     - kind: "update"
       from: "MKL 10.2-1"
       to: "MKL 10.3-1"
