--- a/simplesat/tests/explicit_conflict.yaml
+++ b/simplesat/tests/explicit_conflict.yaml
@@ -15,7 +15,7 @@ failure:
     Conflicting requirements:
     Requirements: 'atom'
         Install command rule (+atom-1.0.0-1)
-    Requirements: 'gdata ^= 1.0.0' <- 'atom'
+    Requirements: 'atom' <- 'gdata ^= 1.0.0'
         gdata-1.0.0-1 conflicts with +atom-1.0.0-1
     Requirements: 'gdata'
         Install command rule (+gdata-1.0.0-1)
