--- a/simplesat/tests/simple_numpy_installed_blocking.yaml
+++ b/simplesat/tests/simple_numpy_installed_blocking.yaml
@@ -25,11 +25,11 @@ failure:
         Conflicting requirements:
         Requirements: 'numpy > 1.8-0'
             Install command rule (+numpy-1.8.1-1 | +numpy-1.8.1-2)
-        Requirements: 'MKL == 10.3-1' <- 'numpy > 1.8-0'
+        Requirements: 'numpy > 1.8-0' <- 'MKL == 10.3-1'
             numpy-1.8.1-2 requires (+MKL-10.3-1)
-        Requirements: 'MKL' <- 'numpy > 1.8-0'
+        Requirements: 'numpy > 1.8-0' <- 'MKL'
             Can only install one of: (+MKL-10.2-1 | +MKL-10.3-1)
-        Requirements: 'MKL == 10.2-1' <- 'EPD_free'
+        Requirements: 'EPD_free' <- 'MKL == 10.2-1'
             EPD_free-7.3-1 requires (+MKL-10.2-1)
         Requirements: 'EPD_free'
             Install command rule (+EPD_free-7.3-1)
