--- a/simplesat/tests/simple_numpy_installed_blocking_downgrade.yaml
+++ b/simplesat/tests/simple_numpy_installed_blocking_downgrade.yaml
@@ -24,9 +24,9 @@ failure:
         Conflicting requirements:
         Requirements: 'numpy < 1.8-0'
             Install command rule (+numpy-1.7.1-1)
-        Requirements: 'numpy' <- 'numpy < 1.8-0'
+        Requirements: 'numpy < 1.8-0' <- 'numpy'
             Can only install one of: (+numpy-1.8.1-1 | +numpy-1.7.1-1)
-        Requirements: 'numpy == 1.8.1-1' <- 'EPD_free'
+        Requirements: 'EPD_free' <- 'numpy == 1.8.1-1'
             EPD_free-7.4-1 requires (+numpy-1.8.1-1)
         Requirements: 'EPD_free'
             Install command rule (+EPD_free-7.4-1)
