--- a/simplesat/tests/simple_numpy_installed_blocking.yaml
+++ b/simplesat/tests/simple_numpy_installed_blocking.yaml
@@ -27,6 +27,8 @@ failure:
             Install command rule (+numpy-1.8.1-1 | +numpy-1.8.1-2)
         Requirements: 'numpy > 1.8-0' <- 'MKL == 10.3-1'
             numpy-1.8.1-2 requires (+MKL-10.3-1)
+        Requirements: 'numpy > 1.8-0' <- 'MKL == 10.3-1'
+            numpy-1.8.1-1 requires (+MKL-10.3-1)
         Requirements: 'numpy > 1.8-0' <- 'MKL'
             Can only install one of: (+MKL-10.2-1 | +MKL-10.3-1)
         Requirements: 'EPD_free' <- 'MKL == 10.2-1'
