--- a/simplesat/tests/simple_numpy_installed_blocking_downgrade.yaml
+++ b/simplesat/tests/simple_numpy_installed_blocking_downgrade.yaml
@@ -19,14 +19,14 @@ installed:
     - numpy 1.8.1-1
 
 failure:
-    requirements: ['numpy < 1.8-0', 'EPD_free']
+    requirements: ['EPD_free', 'numpy < 1.8-0']
     raw: |
         Conflicting requirements:
-        Requirements: 'numpy < 1.8-0'
-            Install command rule (+numpy-1.7.1-1)
-        Requirements: 'numpy < 1.8-0' <- 'numpy'
-            Can only install one of: (+numpy-1.8.1-1 | +numpy-1.7.1-1)
-        Requirements: 'EPD_free' <- 'numpy == 1.8.1-1'
-            EPD_free-7.4-1 requires (+numpy-1.8.1-1)
         Requirements: 'EPD_free'
             Install command rule (+EPD_free-7.4-1)
+        Requirements: 'EPD_free' <- 'numpy == 1.8.1-1'
+            EPD_free-7.4-1 requires (+numpy-1.8.1-1)
+        Requirements: 'numpy < 1.8-0' <- 'numpy'
+            Can only install one of: (+numpy-1.8.1-1 | +numpy-1.7.1-1)
+        Requirements: 'numpy < 1.8-0'
+            Install command rule (+numpy-1.7.1-1)
