--- a/simplesat/tests/three_way_conflict.yaml
+++ b/simplesat/tests/three_way_conflict.yaml
@@ -33,6 +33,12 @@ failure:
         A-1.0.0-1 conflicts with +D-1.0.0-1
     Requirements: 'D'
         Install command rule (+D-1.0.0-1)
+
+    Conflicting requirements:
+    Requirements: 'C'
+        Install command rule (+C-1.0.0-1)
+    Requirements: 'C' <- 'A'
+        C-1.0.0-1 requires (+A-1.0.0-1 | +A-2.0.0-1)
     Requirements: 'E' <- 'A ^= 2.0'
         E-1.0.0-1 conflicts with +A-2.0.0-1
     Requirements: 'E'
