BUG: don't trim long php exception error messages

--- a/scripts/print_operations.php.in
+++ b/scripts/print_operations.php.in
@@ -70,4 +70,8 @@ class DebuggingSolver extends Solver
 $policy = new DefaultPolicy();
 
 $solver = new DebuggingSolver($policy, $pool, $installed_repo);
-$solver->print_operations($request);
+try {
+    $solver->print_operations($request);
+} catch (Exception $e) {
+    echo 'Exception:', $e->getMessage();
+}
