--- a/simplesat/tests/epd_full_conflict.yaml
+++ b/simplesat/tests/epd_full_conflict.yaml
@@ -2023,9 +2023,11 @@ failure:
   requirements: ['EPD', 'numpy > 1.8.0-0']
   raw: |
       Conflicting requirements:
-      Requirements: 'EPD' <- 'numpy == 1.6.0-5'
-          EPD-7.1-1 requires (+numpy-1.6.0-5)
+      Requirements: 'EPD'
+          Install command rule (+EPD-7.0-1 | +EPD-7.0-2 | +EPD-7.1-1 | +EPD-7.1-2 | +EPD-7.2-1 | +EPD-7.2-2 | +EPD-7.3-1 | +EPD-7.3-2)
+      Requirements: 'EPD' <- 'numpy == 1.6.1-2'
+          EPD-7.3-1 requires (+numpy-1.6.1-2)
       Requirements: 'EPD' <- 'numpy'
-          Can only install one of: (+numpy-1.8.1-1 | +numpy-1.6.0-5)
+          Can only install one of: (+numpy-1.8.1-1 | +numpy-1.6.1-2)
       Requirements: 'numpy > 1.8.0-0'
           Install command rule (+numpy-1.8.0-1 | +numpy-1.8.0-2 | +numpy-1.8.0-3 | +numpy-1.8.1-1)
