--- a/simplesat/tests/epd_full_conflict.yaml
+++ b/simplesat/tests/epd_full_conflict.yaml
@@ -2025,7 +2025,7 @@ failure:
       Conflicting requirements:
       Requirements: 'EPD' <- 'numpy == 1.6.0-5'
           EPD-7.1-1 requires (+numpy-1.6.0-5)
-      Requirements: 'EPD' <- 'numpy'
+      Requirements: 'EPD' <- 'SimPy == 2.1.0-2' <- 'numpy' <- 'numpy'
           Can only install one of: (+numpy-1.8.1-1 | +numpy-1.6.0-5)
       Requirements: 'numpy > 1.8.0-0'
           Install command rule (+numpy-1.8.0-1 | +numpy-1.8.0-2 | +numpy-1.8.0-3 | +numpy-1.8.1-1)
