--- a/simplesat/tests/simple_numpy_installed_blocking.yaml
+++ b/simplesat/tests/simple_numpy_installed_blocking.yaml
@@ -27,7 +27,7 @@ failure:
             Install command rule (+EPD_free-7.3-1)
         Requirements: 'EPD_free' <- 'MKL == 10.2-1'
             EPD_free-7.3-1 requires (+MKL-10.2-1)
-        Requirements: 'numpy > 1.8-0' <- 'MKL'
+        Requirements: 'numpy > 1.8-0' <- 'MKL == 10.3-1' <- 'MKL'
             Can only install one of: (+MKL-10.2-1 | +MKL-10.3-1)
         Requirements: 'numpy > 1.8-0' <- 'MKL == 10.3-1'
             numpy-1.8.1-2 requires (+MKL-10.3-1)
