--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ python:
 install:
   - pip install -U pip
   - pip install -U setuptools
-  - pip install -r dev_requirements.txt
+  - pip install -r test_requirements.txt
   - pip install .
 
 script:
   - haas simplesat
+  - cd docs && make html
