--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
 install:
   - pip install -U pip
   - pip install -U setuptools
-  - pip install -r test_requirements.txt
+  - pip install -r doc_requirements.txt
   - pip install .
 
 script:
