WIP: Define soft_update and hard_update on request
Scenario tests for prefer_installed are still failing

--- a/simplesat/tests/simple_update_single.yaml
+++ b/simplesat/tests/simple_update_single.yaml
@@ -4,7 +4,7 @@ packages:
     - MKL 10.3-1
 
 request:
-    - operation: "update"
+    - operation: "hard_update"
       requirement: "MKL"
 
 installed:
