ENH: Do not always prefer installed packages
Changes policy to prefer the installed versions of some packages but not
of others. This applies the new `soft_update` request job type. Test
scenarios are updated to use the new approach instead of the old
prefer_installed flag

--- a/simplesat/tests/no_prefer_installed.yaml
+++ b/simplesat/tests/no_prefer_installed.yaml
@@ -159,8 +159,34 @@ packages:
   - zeromq 4.0.5-1
 
 request:
-    - operation: "install"
+    - operation: "soft_update"
       requirement: "ipython >= 4.0"
+    - operation: "soft_update"
+      requirement: "zeromq"
+    - operation: "soft_update"
+      requirement: "ssl_match_hostname"
+    - operation: "soft_update"
+      requirement: "ptyprocess"
+    - operation: "soft_update"
+      requirement: "certifi"
+    - operation: "soft_update"
+      requirement: "tornado"
+    - operation: "soft_update"
+      requirement: "terminado"
+    - operation: "soft_update"
+      requirement: "pyzmq"
+    - operation: "soft_update"
+      requirement: "mistune"
+    - operation: "soft_update"
+      requirement: "jsonschema"
+    - operation: "soft_update"
+      requirement: "appinst"
+    - operation: "soft_update"
+      requirement: "Pygments"
+    - operation: "soft_update"
+      requirement: "MarkupSafe"
+    - operation: "soft_update"
+      requirement: "Jinja2"
 
 installed:
   - zeromq 4.0.5-1
