--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ addons:
 
 cache:
   pip: true
+
 install:
-  - pip install -U pip
+  - pip install -U pip wheel
   - pip install -U setuptools
   - pip install -r doc_requirements.txt
   - pip install .
