--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - pip install -U pip wheel
   - pip install -U setuptools
   - pip install -r doc_requirements.txt
-  - pip install .
+  - pip install -U .
 
 script:
   - haas simplesat
