Backport prs into 0.8.x (#275)
* MAINT: fix typo in error message.
* activate pip cache
* cache wheels
* always get the latest (allowed) packages for simplesat
* add travis-ci badge
* Add regression test for issue #268
* Simplify the test.
* Remove broken optimization: recompute unsatisfied_clauses from scratch when necesssary.
* Fix unused import.
* MAINT: Fix deprecated attribute 'convert' to comply with attrs 19.2.0
* Fix/Update changelog
* Update changelog

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,14 @@ addons:
     packages:
       - graphviz
 
+cache:
+  pip: true
+
 install:
-  - pip install -U pip
+  - pip install -U pip wheel
   - pip install -U setuptools
   - pip install -r doc_requirements.txt
-  - pip install .
+  - pip install -U .
 
 script:
   - haas simplesat
