--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: {{ matrix.runtime }}
+        python-version: ${{ matrix.runtime }}
     - name: Install dev dependencies
       run: python -m pip install -r dev_requirements.txt
     - name: Install sat-solver
