--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -30,6 +30,10 @@ jobs:
     steps:
     - name: Clone the source
       uses: actions/checkout@v3
+    - name: Install necessary apt-get packages
+      run: |
+        sudo apt-get update
+        sudo apt-get install graphviz
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
