--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = simplesat
 version = file: VERSION
 url = https://github.com/enthought/sat-solver
 author = Enthought Inc.
-author_email = info@enthough.com
+author_email = info@enthought.com
 description = Prototype for SAT-based dependency handling. This is a work in progress, do not expect any API not to change at this point.
 long_description = file: README.rst, CHANGES.rst
 long_description_content_type = text/x-rst
