--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,21 +21,16 @@ jobs:
       with:
         python-version: '3.11'
     - name: install developer dependencies
-      run: -m pip install -r dev_requirements.txt
-      shell: python
+      run: python -m pip install -r dev_requirements.txt
     - name: install sat-solver
-      run: -m pip install -e .
-      shell: python
+      run: python -m pip install -e .
     - name: run tests
-      run: -m haas simplesat
+      run: python -m haas simplesat
       working-directory: ./.github
-      shell: python
     - name: build wheel
-      run: -m build -s -w -n -x
-      shell: python
+      run: python -m build -s -w -n -x
     - name: build wheel
-      run: -m build -s -w -n -x
-      shell: python
+      run: python -m build -s -w -n -x
     - name: sign archives
       uses: sigstore/gh-action-sigstore-python@v3.0.0
       with:
